--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/Pyaara Circle.png">
+    <link rel="apple-touch-icon" href="images/Pyaara Circle.png">
     <title>Sign Up - Authentication System</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
